--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,3 +1,8 @@
-Flask==2.0.3
-psycopg2-binary==2.9.3
-werkzeug==2.0
+Flask==2.0
+Flask-Cors==3.0.10
+Flask-Bcrypt==0.7.1
+Flask-SQLAlchemy==2.5.1
+SQLAlchemy==1.4.23
+psycopg2-binary==2.9.1
+# psycopg2-binary==2.9.1
+werkzeug==2.0.0
