--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,22 @@
 version: '3.8'
 
 services:
+  # client:
+  #   build: ./client
+  #   ports:
+  #     - "3001:3001"
+  #   depends_on:
+  #     - web
+  #   environment:
+  #     - CHOKIDAR_USEPOLLING=true
+  #   volumes:
+  #     - ./client:/client
+  #     - /client/node_modules
+
   web:
     build: ./app
     ports:
-      - "5001:5001"
+      - "5000:5000"
     depends_on:
       - db
     environment:
@@ -13,18 +25,6 @@ services:
       - DATABASE_URL=postgresql://postgres:password@db:5432/mydatabase
     volumes:
       - ./app:/app
-
-  client:
-    build: ./client
-    ports:
-      - "3001:3001"
-    depends_on:
-      - web
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-    volumes:
-      - ./client:/client
-      - /client/node_modules
 
   db:
     image: postgres:13
