--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   # client:
@@ -8,7 +8,7 @@ services:
   #   depends_on:
   #     - web
   #   environment:
-  #     - CHOKIDAR_USEPOLLING=true
+  #     - CHOKIDAR_USEPOLLING=${CHOKIDAR_USEPOLLING}
   #   volumes:
   #     - ./client:/client
   #     - /client/node_modules
@@ -20,18 +20,18 @@ services:
     depends_on:
       - db
     environment:
-      - FLASK_APP=app.py
-      - FLASK_ENV=development
-      - DATABASE_URL=postgresql://postgres:password@db:5432/mydatabase
+      - FLASK_APP=${FLASK_APP}
+      - FLASK_ENV=${FLASK_ENV}
+      - DATABASE_URL=${DATABASE_URL}
     volumes:
       - ./app:/app
 
   db:
     image: postgres:13
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: mydatabase
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
