--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -16,4 +16,4 @@ ENV FLASK_APP=app.py
 ENV FLASK_RUN_HOST=0.0.0.0
 
 # Command to run the Flask application
-CMD ["sh", "entrypoint.sh"]
+CMD ["./entrypoint.sh"]
