--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.21",
     "@types/ol": "^7.0.0",
+    "dotenv": "^16.4.5",
     "ol": "^6.15.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.10.4",
